--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>, 
 Build-Depends: debhelper (>= 9),
   dh-autoreconf,
   po-debconf, bash-completion,
-  supermin (>= 5),
+  supermin (>= 4.1.5-2~),
   libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev, libvirt-dev (>= 1.2.20),
   libvirt-ocaml-dev,
   libounit-ocaml-dev,
