64-bit only 'make quickcheck' with Trusty kernel

--- a/debian/control
+++ b/debian/control
@@ -50,8 +50,8 @@ Build-Depends: debhelper (>= 9),
   golang-go [i386 amd64 armel armhf arm64 mips mipsel mips64el ppc64el],
 # dh-php, php-all-dev | php5-dev,
 # for testing (make quickcheck)
-  linux-image-amd64 [amd64],
-  linux-image-686-pae [i386] | linux-image-586 [i386] | linux-image-486 [i386],
+  linux-image-virtual [amd64],
+# linux-image-686-pae [i386] | linux-image-586 [i386] | linux-image-486 [i386],
   acl,
   attr,
   binutils,
