--- a/debian/control
+++ b/debian/control
@@ -56,7 +56,7 @@ Build-Depends: debhelper (>= 9),
   attr,
   binutils,
   bsdmainutils,
-  btrfs-progs,
+  btrfs-tools,
   bzip2,
   cpio,
   cryptsetup, busybox,
