--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9),
   dh-autoreconf,
   po-debconf, bash-completion,
   supermin (>= 4.1.5-2~),
-  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev, libvirt-dev,
+  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev (>= 1.3.14~), libvirt-dev,
   libvirt-ocaml-dev,
   libounit-ocaml-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
@@ -30,7 +30,7 @@ Build-Depends: debhelper (>= 9),
   genisoimage, pkg-config,
   erlang-dev,
 # dh-lua,
-  ocaml-nox, ocaml-findlib, libpcre-ocaml-dev, libgettext-ocaml-dev,
+  ocaml-nox (>= 4.02.3~), ocaml-findlib, libpcre-ocaml-dev, libgettext-ocaml-dev,
 # python (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~), python3-all-dev,
 # dh-python,
 # default-jdk,
