--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,7 @@ Build-Depends: debhelper (>= 9),
   dh-autoreconf,
   po-debconf, bash-completion,
   supermin (>= 4.1.5-2~),
-  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev (>= 1.3.14~), libvirt-dev,
-  libvirt-ocaml-dev,
+  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-ocaml-dev (>= 1.3.14~),
   libounit-ocaml-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
