--- a/debian/rules
+++ b/debian/rules
@@ -99,7 +99,7 @@ override_dh_install:
 	debian/split-appliance.sh
 
 	dh_install -X.la -X.so.owner -Xbindtests -X/usr/lib/go/ -X/usr/lib/go- -Xpackages.orig -Xetc/php.d \
-	    --fail-missing
+	    --list-missing
 
 # Add packages (except essential packages) from appliance packagelist
 # to libguestfs* dependencies
