--- a/debian/control
+++ b/debian/control
@@ -325,12 +325,8 @@ Description: guest disk image management system - ZFS support
 Package: libguestfs-tools
 Section: admin
 Architecture: linux-any
-Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
- libsys-virt-perl, libguestfs-perl (= ${binary:Version}),
- libwin-hivex-perl,
- libintl-perl, libstring-shellquote-perl,
- curl,
-Recommends: gnupg,
+Depends: libguestfs0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Recommends: gnupg, curl
 Replaces: guestfish (<< 1:1.22.6-1~),
  guestmount (<< 1.24.2-1~),
  libguestfs0 (<< 1:1.18.2-1~),
