--- a/debian/control
+++ b/debian/control
@@ -349,7 +349,8 @@ Package: python3-guestfs
 Section: python
 Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
-Breaks: python-guestfs (<< 1:1.22.2-1~)
+Replaces: python-guestfs
+Breaks: python-guestfs
 Description: guest disk image management system - Python 3 bindings
  The libguestfs library allows accessing and modifying guest disk
  images.
