Add/bump build dependencies for virt-v2v

--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 12),
   libounit-ocaml-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
+  libdbus-1-dev,
   systemtap-sdt-dev,
   libcap-dev, libacl1-dev, libyajl-dev,
   libsystemd-dev | libsystemd-journal-dev,
@@ -40,7 +41,7 @@ Build-Depends: debhelper (>= 12),
   libsys-virt-perl, libwin-hivex-perl,
   libfuse-dev, fuse,
   libglib2.0-dev, gjs [!s390x] <!nocheck>, gobject-introspection, libgirepository1.0-dev,
-  libgtk2.0-dev,
+  libgtk-3-dev,
   db-util,
   netpbm, icoutils,
   po4a,
