Add missing build-dependencies required for building the Supermin appliance (Closes: #949701)

--- a/debian/control
+++ b/debian/control
@@ -60,9 +60,12 @@ Build-Depends: debhelper (>= 12),
   bzip2,
   cpio,
   cryptsetup-bin, busybox,
+  debootstrap,
   dosfstools,
-  exfat-utils,
+  exfat-fuse, exfat-utils,
   extlinux [i386 amd64],
+  f2fs-tools,
+  fdisk,
   file,
   gawk,
   gdisk,
@@ -78,6 +81,7 @@ Build-Depends: debhelper (>= 12),
   isc-dhcp-client,
   jfsutils,
   kmod | module-init-tools,
+  kpartx,
   ldmtool,
   less,
 # libc-bin,
@@ -92,6 +96,7 @@ Build-Depends: debhelper (>= 12),
 # ocfs2-tools,
   openssh-client,
   parted,
+  pciutils,
   procps,
   psmisc,
   reiserfsprogs,
@@ -102,6 +107,7 @@ Build-Depends: debhelper (>= 12),
   syslinux [i386 amd64],
   udev,
 # ufsutils,
+  uuid-runtime,
   vim-tiny,
   e2fsprogs,
   xfsprogs,
