Change btrfs-tools build-dep to btrfs-progs
This will work for Bionic and newer.

--- a/debian/control
+++ b/debian/control
@@ -55,7 +55,7 @@ Build-Depends: debhelper (>= 9),
   attr,
   binutils,
   bsdmainutils,
-  btrfs-tools,
+  btrfs-progs,
   bzip2,
   cpio,
   cryptsetup, busybox,
